parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RESERVED

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     program -> error
Rule 4     statement -> statement command
Rule 5     statement -> command
Rule 6     command -> function_def
Rule 7     command -> function_call
Rule 8     command -> conditional
Rule 9     command -> expression
Rule 10    command -> assignment
Rule 11    command -> expression_ass
Rule 12    command -> input
Rule 13    command -> output
Rule 14    command -> for_loop
Rule 15    command -> while_loop
Rule 16    command -> return
Rule 17    command -> break
Rule 18    command -> continue
Rule 19    command -> COMMENT
Rule 20    command -> NEWLINE
Rule 21    assignment -> ID ASSIGN expression
Rule 22    assignment -> ID ASSIGN LBRACKET list RBRACKET
Rule 23    input -> SCAN LPAREN ID RPAREN
Rule 24    output -> PRINT LPAREN plist RPAREN
Rule 25    plist -> pitem
Rule 26    plist -> plist COMMA pitem
Rule 27    pitem -> expression
Rule 28    condition -> expression GT expression
Rule 29    condition -> expression LT expression
Rule 30    condition -> expression GE expression
Rule 31    condition -> expression LE expression
Rule 32    condition -> expression NE expression
Rule 33    condition -> expression EQ expression
Rule 34    condition -> expression LAND expression
Rule 35    condition -> expression LOR expression
Rule 36    condition -> LNOT expression
Rule 37    condition -> BOOLEAN
Rule 38    ternary_condition -> LPAREN condition RPAREN QUES bloc COLON bloc
Rule 39    if_bloc -> IF LPAREN condition RPAREN bloc
Rule 40    if_elif_bloc -> if_elif_bloc ELSE if_bloc
Rule 41    if_elif_bloc -> if_bloc
Rule 42    conditional -> if_elif_bloc ELSE bloc
Rule 43    conditional -> if_elif_bloc
Rule 44    bloc -> LBRACE stat_bloc RBRACE
Rule 45    stat_bloc -> stat_bloc command
Rule 46    stat_bloc -> command
Rule 47    function_def -> FUNCTION ID LPAREN param_list RPAREN bloc
Rule 48    function_def -> FUNCTION ID LPAREN RPAREN bloc
Rule 49    function_call -> ID LPAREN param_list_call RPAREN
Rule 50    function_call -> ID LPAREN RPAREN
Rule 51    param_list_call -> param_list_call COMMA param_call
Rule 52    param_list_call -> param_call
Rule 53    param_call -> factor
Rule 54    param_list -> param_list COMMA param
Rule 55    param_list -> param
Rule 56    param -> ID
Rule 57    return -> RETURN expression
Rule 58    return -> RETURN expression SEMI
Rule 59    for_loop -> FOR LPAREN assignment SEMI condition SEMI expression RPAREN bloc
Rule 60    while_loop -> WHILE LPAREN condition RPAREN bloc
Rule 61    continue -> CONTINUE
Rule 62    continue -> CONTINUE SEMI
Rule 63    break -> BREAK
Rule 64    break -> BREAK SEMI
Rule 65    expression -> expression SUM term
Rule 66    expression -> expression SUB term
Rule 67    term -> term MUL factor
Rule 68    term -> term DIV factor
Rule 69    term -> term IDIV factor
Rule 70    term -> term MOD factor
Rule 71    expression -> expression DECR
Rule 72    expression -> expression INCR
Rule 73    expression_ass -> ID SUM_ASS expression
Rule 74    expression_ass -> ID SUB_ASS expression
Rule 75    expression_ass -> ID MUL_ASS expression
Rule 76    expression_ass -> ID DIV_ASS expression
Rule 77    expression_ass -> ID IDIV_ASS expression
Rule 78    expression_ass -> ID MOD_ASS expression
Rule 79    expression -> condition
Rule 80    expression -> ternary_condition
Rule 81    expression -> term
Rule 82    expression -> NULL
Rule 83    term -> factor
Rule 84    factor -> NUMBER
Rule 85    factor -> ID
Rule 86    factor -> STRING
Rule 87    factor -> ID LBRACKET expression RBRACKET
Rule 88    factor -> LPAREN expression RPAREN
Rule 89    list -> list COMMA factor
Rule 90    list -> factor
Rule 91    list -> <empty>

Terminals, with rules where they appear

ASSIGN               : 21 22
BOOLEAN              : 37
BREAK                : 63 64
COLON                : 38
COMMA                : 26 51 54 89
COMMENT              : 19
CONTINUE             : 61 62
DECR                 : 71
DIV                  : 68
DIV_ASS              : 76
ELSE                 : 40 42
EQ                   : 33
FOR                  : 59
FUNCTION             : 47 48
GE                   : 30
GT                   : 28
ID                   : 21 22 23 47 48 49 50 56 73 74 75 76 77 78 85 87
IDIV                 : 69
IDIV_ASS             : 77
IF                   : 39
INCR                 : 72
LAND                 : 34
LBRACE               : 44
LBRACKET             : 22 87
LE                   : 31
LNOT                 : 36
LOR                  : 35
LPAREN               : 23 24 38 39 47 48 49 50 59 60 88
LT                   : 29
MOD                  : 70
MOD_ASS              : 78
MUL                  : 67
MUL_ASS              : 75
NE                   : 32
NEWLINE              : 20
NULL                 : 82
NUMBER               : 84
PRINT                : 24
QUES                 : 38
RBRACE               : 44
RBRACKET             : 22 87
RESERVED             : 
RETURN               : 57 58
RPAREN               : 23 24 38 39 47 48 49 50 59 60 88
SCAN                 : 23
SEMI                 : 58 59 59 62 64
STRING               : 86
SUB                  : 66
SUB_ASS              : 74
SUM                  : 65
SUM_ASS              : 73
WHILE                : 60
error                : 3

Nonterminals, with rules where they appear

assignment           : 10 59
bloc                 : 38 38 39 42 47 48 59 60
break                : 17
command              : 4 5 45 46
condition            : 38 39 59 60 79
conditional          : 8
continue             : 18
expression           : 9 21 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 57 58 59 65 66 71 72 73 74 75 76 77 78 87 88
expression_ass       : 11
factor               : 53 67 68 69 70 83 89 90
for_loop             : 14
function_call        : 7
function_def         : 6
if_bloc              : 40 41
if_elif_bloc         : 40 42 43
input                : 12
list                 : 22 89
output               : 13
param                : 54 55
param_call           : 51 52
param_list           : 47 54
param_list_call      : 49 51
pitem                : 25 26
plist                : 24 26
program              : 1 0
return               : 16
stat_bloc            : 44 45
statement            : 1 2 4
term                 : 65 66 67 68 69 70 81
ternary_condition    : 80
while_loop           : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) program -> . error
    (4) statement -> . statement command
    (5) statement -> . command
    (6) command -> . function_def
    (7) command -> . function_call
    (8) command -> . conditional
    (9) command -> . expression
    (10) command -> . assignment
    (11) command -> . expression_ass
    (12) command -> . input
    (13) command -> . output
    (14) command -> . for_loop
    (15) command -> . while_loop
    (16) command -> . return
    (17) command -> . break
    (18) command -> . continue
    (19) command -> . COMMENT
    (20) command -> . NEWLINE
    (47) function_def -> . FUNCTION ID LPAREN param_list RPAREN bloc
    (48) function_def -> . FUNCTION ID LPAREN RPAREN bloc
    (49) function_call -> . ID LPAREN param_list_call RPAREN
    (50) function_call -> . ID LPAREN RPAREN
    (42) conditional -> . if_elif_bloc ELSE bloc
    (43) conditional -> . if_elif_bloc
    (65) expression -> . expression SUM term
    (66) expression -> . expression SUB term
    (71) expression -> . expression DECR
    (72) expression -> . expression INCR
    (79) expression -> . condition
    (80) expression -> . ternary_condition
    (81) expression -> . term
    (82) expression -> . NULL
    (21) assignment -> . ID ASSIGN expression
    (22) assignment -> . ID ASSIGN LBRACKET list RBRACKET
    (73) expression_ass -> . ID SUM_ASS expression
    (74) expression_ass -> . ID SUB_ASS expression
    (75) expression_ass -> . ID MUL_ASS expression
    (76) expression_ass -> . ID DIV_ASS expression
    (77) expression_ass -> . ID IDIV_ASS expression
    (78) expression_ass -> . ID MOD_ASS expression
    (23) input -> . SCAN LPAREN ID RPAREN
    (24) output -> . PRINT LPAREN plist RPAREN
    (59) for_loop -> . FOR LPAREN assignment SEMI condition SEMI expression RPAREN bloc
    (60) while_loop -> . WHILE LPAREN condition RPAREN bloc
    (57) return -> . RETURN expression
    (58) return -> . RETURN expression SEMI
    (63) break -> . BREAK
    (64) break -> . BREAK SEMI
    (61) continue -> . CONTINUE
    (62) continue -> . CONTINUE SEMI
    (40) if_elif_bloc -> . if_elif_bloc ELSE if_bloc
    (41) if_elif_bloc -> . if_bloc
    (28) condition -> . expression GT expression
    (29) condition -> . expression LT expression
    (30) condition -> . expression GE expression
    (31) condition -> . expression LE expression
    (32) condition -> . expression NE expression
    (33) condition -> . expression EQ expression
    (34) condition -> . expression LAND expression
    (35) condition -> . expression LOR expression
    (36) condition -> . LNOT expression
    (37) condition -> . BOOLEAN
    (38) ternary_condition -> . LPAREN condition RPAREN QUES bloc COLON bloc
    (67) term -> . term MUL factor
    (68) term -> . term DIV factor
    (69) term -> . term IDIV factor
    (70) term -> . term MOD factor
    (83) term -> . factor
    (39) if_bloc -> . IF LPAREN condition RPAREN bloc
    (84) factor -> . NUMBER
    (85) factor -> . ID
    (86) factor -> . STRING
    (87) factor -> . ID LBRACKET expression RBRACKET
    (88) factor -> . LPAREN expression RPAREN

    error           shift and go to state 3
    COMMENT         shift and go to state 18
    NEWLINE         shift and go to state 19
    FUNCTION        shift and go to state 20
    ID              shift and go to state 21
    NULL            shift and go to state 27
    SCAN            shift and go to state 28
    PRINT           shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    RETURN          shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    LNOT            shift and go to state 36
    BOOLEAN         shift and go to state 37
    LPAREN          shift and go to state 22
    IF              shift and go to state 39
    NUMBER          shift and go to state 40
    STRING          shift and go to state 41

    program                        shift and go to state 1
    statement                      shift and go to state 2
    command                        shift and go to state 4
    function_def                   shift and go to state 5
    function_call                  shift and go to state 6
    conditional                    shift and go to state 7
    expression                     shift and go to state 8
    assignment                     shift and go to state 9
    expression_ass                 shift and go to state 10
    input                          shift and go to state 11
    output                         shift and go to state 12
    for_loop                       shift and go to state 13
    while_loop                     shift and go to state 14
    return                         shift and go to state 15
    break                          shift and go to state 16
    continue                       shift and go to state 17
    if_elif_bloc                   shift and go to state 23
    term                           shift and go to state 24
    condition                      shift and go to state 25
    ternary_condition              shift and go to state 26
    if_bloc                        shift and go to state 35
    factor                         shift and go to state 38

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (4) statement -> . statement command
    (5) statement -> . command
    (6) command -> . function_def
    (7) command -> . function_call
    (8) command -> . conditional
    (9) command -> . expression
    (10) command -> . assignment
    (11) command -> . expression_ass
    (12) command -> . input
    (13) command -> . output
    (14) command -> . for_loop
    (15) command -> . while_loop
    (16) command -> . return
    (17) command -> . break
    (18) command -> . continue
    (19) command -> . COMMENT
    (20) command -> . NEWLINE
    (47) function_def -> . FUNCTION ID LPAREN param_list RPAREN bloc
    (48) function_def -> . FUNCTION ID LPAREN RPAREN bloc
    (49) function_call -> . ID LPAREN param_list_call RPAREN
    (50) function_call -> . ID LPAREN RPAREN
    (42) conditional -> . if_elif_bloc ELSE bloc
    (43) conditional -> . if_elif_bloc
    (65) expression -> . expression SUM term
    (66) expression -> . expression SUB term
    (71) expression -> . expression DECR
    (72) expression -> . expression INCR
    (79) expression -> . condition
    (80) expression -> . ternary_condition
    (81) expression -> . term
    (82) expression -> . NULL
    (21) assignment -> . ID ASSIGN expression
    (22) assignment -> . ID ASSIGN LBRACKET list RBRACKET
    (73) expression_ass -> . ID SUM_ASS expression
    (74) expression_ass -> . ID SUB_ASS expression
    (75) expression_ass -> . ID MUL_ASS expression
    (76) expression_ass -> . ID DIV_ASS expression
    (77) expression_ass -> . ID IDIV_ASS expression
    (78) expression_ass -> . ID MOD_ASS expression
    (23) input -> . SCAN LPAREN ID RPAREN
    (24) output -> . PRINT LPAREN plist RPAREN
    (59) for_loop -> . FOR LPAREN assignment SEMI condition SEMI expression RPAREN bloc
    (60) while_loop -> . WHILE LPAREN condition RPAREN bloc
    (57) return -> . RETURN expression
    (58) return -> . RETURN expression SEMI
    (63) break -> . BREAK
    (64) break -> . BREAK SEMI
    (61) continue -> . CONTINUE
    (62) continue -> . CONTINUE SEMI
    (40) if_elif_bloc -> . if_elif_bloc ELSE if_bloc
    (41) if_elif_bloc -> . if_bloc
    (28) condition -> . expression GT expression
    (29) condition -> . expression LT expression
    (30) condition -> . expression GE expression
    (31) condition -> . expression LE expression
    (32) condition -> . expression NE expression
    (33) condition -> . expression EQ expression
    (34) condition -> . expression LAND expression
    (35) condition -> . expression LOR expression
    (36) condition -> . LNOT expression
    (37) condition -> . BOOLEAN
    (38) ternary_condition -> . LPAREN condition RPAREN QUES bloc COLON bloc
    (67) term -> . term MUL factor
    (68) term -> . term DIV factor
    (69) term -> . term IDIV factor
    (70) term -> . term MOD factor
    (83) term -> . factor
    (39) if_bloc -> . IF LPAREN condition RPAREN bloc
    (84) factor -> . NUMBER
    (85) factor -> . ID
    (86) factor -> . STRING
    (87) factor -> . ID LBRACKET expression RBRACKET
    (88) factor -> . LPAREN expression RPAREN

    COMMENT         shift and go to state 18
    NEWLINE         shift and go to state 19
    FUNCTION        shift and go to state 20
    ID              shift and go to state 21
    NULL            shift and go to state 27
    SCAN            shift and go to state 28
    PRINT           shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    RETURN          shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    LNOT            shift and go to state 36
    BOOLEAN         shift and go to state 37
    LPAREN          shift and go to state 22
    IF              shift and go to state 39
    NUMBER          shift and go to state 40
    STRING          shift and go to state 41

    statement                      shift and go to state 42
    command                        shift and go to state 4
    function_def                   shift and go to state 5
    function_call                  shift and go to state 6
    conditional                    shift and go to state 7
    expression                     shift and go to state 8
    assignment                     shift and go to state 9
    expression_ass                 shift and go to state 10
    input                          shift and go to state 11
    output                         shift and go to state 12
    for_loop                       shift and go to state 13
    while_loop                     shift and go to state 14
    return                         shift and go to state 15
    break                          shift and go to state 16
    continue                       shift and go to state 17
    if_elif_bloc                   shift and go to state 23
    term                           shift and go to state 24
    condition                      shift and go to state 25
    ternary_condition              shift and go to state 26
    if_bloc                        shift and go to state 35
    factor                         shift and go to state 38

state 2

    (2) program -> statement .
    (4) statement -> statement . command
    (6) command -> . function_def
    (7) command -> . function_call
    (8) command -> . conditional
    (9) command -> . expression
    (10) command -> . assignment
    (11) command -> . expression_ass
    (12) command -> . input
    (13) command -> . output
    (14) command -> . for_loop
    (15) command -> . while_loop
    (16) command -> . return
    (17) command -> . break
    (18) command -> . continue
    (19) command -> . COMMENT
    (20) command -> . NEWLINE
    (47) function_def -> . FUNCTION ID LPAREN param_list RPAREN bloc
    (48) function_def -> . FUNCTION ID LPAREN RPAREN bloc
    (49) function_call -> . ID LPAREN param_list_call RPAREN
    (50) function_call -> . ID LPAREN RPAREN
    (42) conditional -> . if_elif_bloc ELSE bloc
    (43) conditional -> . if_elif_bloc
    (65) expression -> . expression SUM term
    (66) expression -> . expression SUB term
    (71) expression -> . expression DECR
    (72) expression -> . expression INCR
    (79) expression -> . condition
    (80) expression -> . ternary_condition
    (81) expression -> . term
    (82) expression -> . NULL
    (21) assignment -> . ID ASSIGN expression
    (22) assignment -> . ID ASSIGN LBRACKET list RBRACKET
    (73) expression_ass -> . ID SUM_ASS expression
    (74) expression_ass -> . ID SUB_ASS expression
    (75) expression_ass -> . ID MUL_ASS expression
    (76) expression_ass -> . ID DIV_ASS expression
    (77) expression_ass -> . ID IDIV_ASS expression
    (78) expression_ass -> . ID MOD_ASS expression
    (23) input -> . SCAN LPAREN ID RPAREN
    (24) output -> . PRINT LPAREN plist RPAREN
    (59) for_loop -> . FOR LPAREN assignment SEMI condition SEMI expression RPAREN bloc
    (60) while_loop -> . WHILE LPAREN condition RPAREN bloc
    (57) return -> . RETURN expression
    (58) return -> . RETURN expression SEMI
    (63) break -> . BREAK
    (64) break -> . BREAK SEMI
    (61) continue -> . CONTINUE
    (62) continue -> . CONTINUE SEMI
    (40) if_elif_bloc -> . if_elif_bloc ELSE if_bloc
    (41) if_elif_bloc -> . if_bloc
    (28) condition -> . expression GT expression
    (29) condition -> . expression LT expression
    (30) condition -> . expression GE expression
    (31) condition -> . expression LE expression
    (32) condition -> . expression NE expression
    (33) condition -> . expression EQ expression
    (34) condition -> . expression LAND expression
    (35) condition -> . expression LOR expression
    (36) condition -> . LNOT expression
    (37) condition -> . BOOLEAN
    (38) ternary_condition -> . LPAREN condition RPAREN QUES bloc COLON bloc
    (67) term -> . term MUL factor
    (68) term -> . term DIV factor
    (69) term -> . term IDIV factor
    (70) term -> . term MOD factor
    (83) term -> . factor
    (39) if_bloc -> . IF LPAREN condition RPAREN bloc
    (84) factor -> . NUMBER
    (85) factor -> . ID
    (86) factor -> . STRING
    (87) factor -> . ID LBRACKET expression RBRACKET
    (88) factor -> . LPAREN expression RPAREN

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for SCAN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for LNOT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    $end            reduce using rule 2 (program -> statement .)
    COMMENT         shift and go to state 18
    NEWLINE         shift and go to state 19
    FUNCTION        shift and go to state 20
    ID              shift and go to state 21
    NULL            shift and go to state 27
    SCAN            shift and go to state 28
    PRINT           shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    RETURN          shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    LNOT            shift and go to state 36
    BOOLEAN         shift and go to state 37
    LPAREN          shift and go to state 22
    IF              shift and go to state 39
    NUMBER          shift and go to state 40
    STRING          shift and go to state 41

  ! COMMENT         [ reduce using rule 2 (program -> statement .) ]
  ! NEWLINE         [ reduce using rule 2 (program -> statement .) ]
  ! FUNCTION        [ reduce using rule 2 (program -> statement .) ]
  ! ID              [ reduce using rule 2 (program -> statement .) ]
  ! NULL            [ reduce using rule 2 (program -> statement .) ]
  ! SCAN            [ reduce using rule 2 (program -> statement .) ]
  ! PRINT           [ reduce using rule 2 (program -> statement .) ]
  ! FOR             [ reduce using rule 2 (program -> statement .) ]
  ! WHILE           [ reduce using rule 2 (program -> statement .) ]
  ! RETURN          [ reduce using rule 2 (program -> statement .) ]
  ! BREAK           [ reduce using rule 2 (program -> statement .) ]
  ! CONTINUE        [ reduce using rule 2 (program -> statement .) ]
  ! LNOT            [ reduce using rule 2 (program -> statement .) ]
  ! BOOLEAN         [ reduce using rule 2 (program -> statement .) ]
  ! LPAREN          [ reduce using rule 2 (program -> statement .) ]
  ! IF              [ reduce using rule 2 (program -> statement .) ]
  ! NUMBER          [ reduce using rule 2 (program -> statement .) ]
  ! STRING          [ reduce using rule 2 (program -> statement .) ]

    command                        shift and go to state 43
    function_def                   shift and go to state 5
    function_call                  shift and go to state 6
    conditional                    shift and go to state 7
    expression                     shift and go to state 8
    assignment                     shift and go to state 9
    expression_ass                 shift and go to state 10
    input                          shift and go to state 11
    output                         shift and go to state 12
    for_loop                       shift and go to state 13
    while_loop                     shift and go to state 14
    return                         shift and go to state 15
    break                          shift and go to state 16
    continue                       shift and go to state 17
    if_elif_bloc                   shift and go to state 23
    term                           shift and go to state 24
    condition                      shift and go to state 25
    ternary_condition              shift and go to state 26
    if_bloc                        shift and go to state 35
    factor                         shift and go to state 38

state 3

    (3) program -> error .

    COMMENT         reduce using rule 3 (program -> error .)
    NEWLINE         reduce using rule 3 (program -> error .)
    FUNCTION        reduce using rule 3 (program -> error .)
    ID              reduce using rule 3 (program -> error .)
    NULL            reduce using rule 3 (program -> error .)
    SCAN            reduce using rule 3 (program -> error .)
    PRINT           reduce using rule 3 (program -> error .)
    FOR             reduce using rule 3 (program -> error .)
    WHILE           reduce using rule 3 (program -> error .)
    RETURN          reduce using rule 3 (program -> error .)
    BREAK           reduce using rule 3 (program -> error .)
    CONTINUE        reduce using rule 3 (program -> error .)
    LNOT            reduce using rule 3 (program -> error .)
    BOOLEAN         reduce using rule 3 (program -> error .)
    LPAREN          reduce using rule 3 (program -> error .)
    IF              reduce using rule 3 (program -> error .)
    NUMBER          reduce using rule 3 (program -> error .)
    STRING          reduce using rule 3 (program -> error .)
    $end            reduce using rule 3 (program -> error .)


state 4

    (5) statement -> command .

    COMMENT         reduce using rule 5 (statement -> command .)
    NEWLINE         reduce using rule 5 (statement -> command .)
    FUNCTION        reduce using rule 5 (statement -> command .)
    ID              reduce using rule 5 (statement -> command .)
    NULL            reduce using rule 5 (statement -> command .)
    SCAN            reduce using rule 5 (statement -> command .)
    PRINT           reduce using rule 5 (statement -> command .)
    FOR             reduce using rule 5 (statement -> command .)
    WHILE           reduce using rule 5 (statement -> command .)
    RETURN          reduce using rule 5 (statement -> command .)
    BREAK           reduce using rule 5 (statement -> command .)
    CONTINUE        reduce using rule 5 (statement -> command .)
    LNOT            reduce using rule 5 (statement -> command .)
    BOOLEAN         reduce using rule 5 (statement -> command .)
    LPAREN          reduce using rule 5 (statement -> command .)
    IF              reduce using rule 5 (statement -> command .)
    NUMBER          reduce using rule 5 (statement -> command .)
    STRING          reduce using rule 5 (statement -> command .)
    $end            reduce using rule 5 (statement -> command .)


state 5

    (6) command -> function_def .

    COMMENT         reduce using rule 6 (command -> function_def .)
    NEWLINE         reduce using rule 6 (command -> function_def .)
    FUNCTION        reduce using rule 6 (command -> function_def .)
    ID              reduce using rule 6 (command -> function_def .)
    NULL            reduce using rule 6 (command -> function_def .)
    SCAN            reduce using rule 6 (command -> function_def .)
    PRINT           reduce using rule 6 (command -> function_def .)
    FOR             reduce using rule 6 (command -> function_def .)
    WHILE           reduce using rule 6 (command -> function_def .)
    RETURN          reduce using rule 6 (command -> function_def .)
    BREAK           reduce using rule 6 (command -> function_def .)
    CONTINUE        reduce using rule 6 (command -> function_def .)
    LNOT            reduce using rule 6 (command -> function_def .)
    BOOLEAN         reduce using rule 6 (command -> function_def .)
    LPAREN          reduce using rule 6 (command -> function_def .)
    IF              reduce using rule 6 (command -> function_def .)
    NUMBER          reduce using rule 6 (command -> function_def .)
    STRING          reduce using rule 6 (command -> function_def .)
    $end            reduce using rule 6 (command -> function_def .)
    RBRACE          reduce using rule 6 (command -> function_def .)


state 6

    (7) command -> function_call .

    COMMENT         reduce using rule 7 (command -> function_call .)
    NEWLINE         reduce using rule 7 (command -> function_call .)
    FUNCTION        reduce using rule 7 (command -> function_call .)
    ID              reduce using rule 7 (command -> function_call .)
    NULL            reduce using rule 7 (command -> function_call .)
    SCAN            reduce using rule 7 (command -> function_call .)
    PRINT           reduce using rule 7 (command -> function_call .)
    FOR             reduce using rule 7 (command -> function_call .)
    WHILE           reduce using rule 7 (command -> function_call .)
    RETURN          reduce using rule 7 (command -> function_call .)
    BREAK           reduce using rule 7 (command -> function_call .)
    CONTINUE        reduce using rule 7 (command -> function_call .)
    LNOT            reduce using rule 7 (command -> function_call .)
    BOOLEAN         reduce using rule 7 (command -> function_call .)
    LPAREN          reduce using rule 7 (command -> function_call .)
    IF              reduce using rule 7 (command -> function_call .)
    NUMBER          reduce using rule 7 (command -> function_call .)
    STRING          reduce using rule 7 (command -> function_call .)
    $end            reduce using rule 7 (command -> function_call .)
    RBRACE          reduce using rule 7 (command -> function_call .)


state 7

    (8) command -> conditional .

    COMMENT         reduce using rule 8 (command -> conditional .)
    NEWLINE         reduce using rule 8 (command -> conditional .)
    FUNCTION        reduce using rule 8 (command -> conditional .)
    ID              reduce using rule 8 (command -> conditional .)
    NULL            reduce using rule 8 (command -> conditional .)
    SCAN            reduce using rule 8 (command -> conditional .)
    PRINT           reduce using rule 8 (command -> conditional .)
    FOR             reduce using rule 8 (command -> conditional .)
    WHILE           reduce using rule 8 (command -> conditional .)
    RETURN          reduce using rule 8 (command -> conditional .)
    BREAK           reduce using rule 8 (command -> conditional .)
    CONTINUE        reduce using rule 8 (command -> conditional .)
    LNOT            reduce using rule 8 (command -> conditional .)
    BOOLEAN         reduce using rule 8 (command -> conditional .)
    LPAREN          reduce using rule 8 (command -> conditional .)
    IF              reduce using rule 8 (command -> conditional .)
    NUMBER          reduce using rule 8 (command -> conditional .)
    STRING          reduce using rule 8 (command -> conditional .)
    $end            reduce using rule 8 (command -> conditional .)
    RBRACE          reduce using rule 8 (command -> conditional .)


state 8

    (9) command -> expression .
    (65) expression -> expression . SUM term
    (66) expression -> expression . SUB term
    (71) expression -> expression . DECR
    (72) expression -> expression . INCR
    (28) condition -> expression . GT expression
    (29) condition -> expression . LT expression
    (30) condition -> expression . GE expression
    (31) condition -> expression . LE expression
    (32) condition -> expression . NE expression
    (33) condition -> expression . EQ expression
    (34) condition -> expression . LAND expression
    (35) condition -> expression . LOR expression

    COMMENT         reduce using rule 9 (command -> expression .)
    NEWLINE         reduce using rule 9 (command -> expression .)
    FUNCTION        reduce using rule 9 (command -> expression .)
    ID              reduce using rule 9 (command -> expression .)
    NULL            reduce using rule 9 (command -> expression .)
    SCAN            reduce using rule 9 (command -> expression .)
    PRINT           reduce using rule 9 (command -> expression .)
    FOR             reduce using rule 9 (command -> expression .)
    WHILE           reduce using rule 9 (command -> expression .)
    RETURN          reduce using rule 9 (command -> expression .)
    BREAK           reduce using rule 9 (command -> expression .)
    CONTINUE        reduce using rule 9 (command -> expression .)
    LNOT            reduce using rule 9 (command -> expression .)
    BOOLEAN         reduce using rule 9 (command -> expression .)
    LPAREN          reduce using rule 9 (command -> expression .)
    IF              reduce using rule 9 (command -> expression .)
    NUMBER          reduce using rule 9 (command -> expression .)
    STRING          reduce using rule 9 (command -> expression .)
    $end            reduce using rule 9 (command -> expression .)
    RBRACE          reduce using rule 9 (command -> expression .)
    SUM             shift and go to state 44
    SUB             shift and go to state 45
    DECR            shift and go to state 46
    INCR            shift and go to state 47
    GT              shift and go to state 48
    LT              shift and go to state 49
    GE              shift and go to state 50
    LE              shift and go to state 51
    NE              shift and go to state 52
    EQ              shift and go to state 53
    LAND            shift and go to state 54
    LOR             shift and go to state 55


state 9

    (10) command -> assignment .

    COMMENT         reduce using rule 10 (command -> assignment .)
    NEWLINE         reduce using rule 10 (command -> assignment .)
    FUNCTION        reduce using rule 10 (command -> assignment .)
    ID              reduce using rule 10 (command -> assignment .)
    NULL            reduce using rule 10 (command -> assignment .)
    SCAN            reduce using rule 10 (command -> assignment .)
    PRINT           reduce using rule 10 (command -> assignment .)
    FOR             reduce using rule 10 (command -> assignment .)
    WHILE           reduce using rule 10 (command -> assignment .)
    RETURN          reduce using rule 10 (command -> assignment .)
    BREAK           reduce using rule 10 (command -> assignment .)
    CONTINUE        reduce using rule 10 (command -> assignment .)
    LNOT            reduce using rule 10 (command -> assignment .)
    BOOLEAN         reduce using rule 10 (command -> assignment .)
    LPAREN          reduce using rule 10 (command -> assignment .)
    IF              reduce using rule 10 (command -> assignment .)
    NUMBER          reduce using rule 10 (command -> assignment .)
    STRING          reduce using rule 10 (command -> assignment .)
    $end            reduce using rule 10 (command -> assignment .)
    RBRACE          reduce using rule 10 (command -> assignment .)


state 10

    (11) command -> expression_ass .

    COMMENT         reduce using rule 11 (command -> expression_ass .)
    NEWLINE         reduce using rule 11 (command -> expression_ass .)
    FUNCTION        reduce using rule 11 (command -> expression_ass .)
    ID              reduce using rule 11 (command -> expression_ass .)
    NULL            reduce using rule 11 (command -> expression_ass .)
    SCAN            reduce using rule 11 (command -> expression_ass .)
    PRINT           reduce using rule 11 (command -> expression_ass .)
    FOR             reduce using rule 11 (command -> expression_ass .)
    WHILE           reduce using rule 11 (command -> expression_ass .)
    RETURN          reduce using rule 11 (command -> expression_ass .)
    BREAK           reduce using rule 11 (command -> expression_ass .)
    CONTINUE        reduce using rule 11 (command -> expression_ass .)
    LNOT            reduce using rule 11 (command -> expression_ass .)
    BOOLEAN         reduce using rule 11 (command -> expression_ass .)
    LPAREN          reduce using rule 11 (command -> expression_ass .)
    IF              reduce using rule 11 (command -> expression_ass .)
    NUMBER          reduce using rule 11 (command -> expression_ass .)
    STRING          reduce using rule 11 (command -> expression_ass .)
    $end            reduce using rule 11 (command -> expression_ass .)
    RBRACE          reduce using rule 11 (command -> expression_ass .)


state 11

    (12) command -> input .

    COMMENT         reduce using rule 12 (command -> input .)
    NEWLINE         reduce using rule 12 (command -> input .)
    FUNCTION        reduce using rule 12 (command -> input .)
    ID              reduce using rule 12 (command -> input .)
    NULL            reduce using rule 12 (command -> input .)
    SCAN            reduce using rule 12 (command -> input .)
    PRINT           reduce using rule 12 (command -> input .)
    FOR             reduce using rule 12 (command -> input .)
    WHILE           reduce using rule 12 (command -> input .)
    RETURN          reduce using rule 12 (command -> input .)
    BREAK           reduce using rule 12 (command -> input .)
    CONTINUE        reduce using rule 12 (command -> input .)
    LNOT            reduce using rule 12 (command -> input .)
    BOOLEAN         reduce using rule 12 (command -> input .)
    LPAREN          reduce using rule 12 (command -> input .)
    IF              reduce using rule 12 (command -> input .)
    NUMBER          reduce using rule 12 (command -> input .)
    STRING          reduce using rule 12 (command -> input .)
    $end            reduce using rule 12 (command -> input .)
    RBRACE          reduce using rule 12 (command -> input .)


state 12

    (13) command -> output .
